// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email templates snapshot tests renders CMS new submission email as expected 1`] = `
"Managed Care submission: <b>CMS-new-submission-snapshot</b> was received from <b>MN</b>.
            <br />
            <br />
            
        <b>Submission type</b>: Contract action and rate certification
        <br />
        <b>Contract effective dates</b>: 07/05/2022 to 07/05/2022
        <br />
        <b>Rate name</b>: CMS-new-submission-snapshot-RATE-20220705-20220705-CERTIFICATION-20220705<br />
        <b>Rating period</b>: 07/05/2022 to 07/05/2022<br />
        <b>Submission description</b>: A submitted submission
        <br />
        <br />
        <a href=\\"http://localhost/submissions/test-abc-125\\">View submission</a>
    
        "
`;

exports[`Email templates snapshot tests renders CMS resubmit email as expected 1`] = `
"The state completed their edits on submission MCR-VA-CCCPLUS-0002<br />
        <br />
        <b>Submitted by:</b> bob@example.com<br />
        <b>Updated on:</b> 02/01/2022<br />
        <b>Changes made:</b> Added rate certification.<br />
        <b>Rate name</b>: MCR-VA-CCCPLUS-0002-RATE-20220705-20220705-CERTIFICATION-20220705<br />
        <br />
        <a href=\\"http://localhost/submissions/test-abc-125\\">View submission</a>
    "
`;

exports[`Email templates snapshot tests renders CMS unlock email as expected 1`] = `
"Submission MCR-VA-CCCPLUS-0001 was unlocked<br />
        <br />
        <b>Unlocked by:</b> leslie@example.com<br />
        <b>Unlocked on:</b> 01/01/2022<br />
        <b>Reason for unlock:</b> Adding rate development guide.<br /><br />
        <b>Rate name</b>: test-rate-name<br />
        You will receive another notification when the state resubmits.
    "
`;

exports[`Email templates snapshot tests renders state new submission email as expected 1`] = `
"MN-new-submission-snapshot was successfully submitted.
            <br /><br />
            
        <b>Submission type</b>: Contract action and rate certification
        <br />
        <b>Contract effective dates</b>: 01/01/2021 to 01/01/2025
        <br />
        <b>Rate name</b>: MN-new-submission-snapshot-RATE-20210605-20211231-AMENDMENT-20220705<br />
        <b>Rate amendment effective dates</b>: 06/05/2021 to 12/31/2021<br />
        <b>Submission description</b>: A submitted submission
        <br />
        <br />
        <a href=\\"http://localhost/submissions/test-abc-125\\">View submission</a>
    
            <br /><br />
            If you need to make any changes, please contact CMS.
            <br /><br />
            <div>What comes next:</div>
            <ol>
                <li>
                    <strong>Check for completeness:</strong> CMS will review all documentation submitted to ensure all required materials were received.
                </li>
                <li>
                    <strong>CMS review:</strong> Your submission will be reviewed by CMS for adherence to federal regulations.
                </li>
                <li>
                    <strong>Questions:</strong> You may receive questions via email from CMS as they conduct their review.
                </li>
                <li>
                    <strong>Decision:</strong> Once all questions have been addressed, CMS will contact you with their final recommendation.

                </li>
            </ol>
            <br />
            <div>If you need assistance or to make changes to your submission:</div>
            <ul>
                <li>
                    For assistance with programmatic, contractual, or operational issues, please reach out to mcog@example.com and/or your CMS primary contact.
                </li>
                <li>
                    For assistance on policy and actuarial issues, please reach out to rates@example.com.
                </li>
                <li>
                    For issues related to MC-Review or all other inquiries, please reach out to mc-review@example.com.
                </li>
            </ul>
        "
`;

exports[`Email templates snapshot tests renders state resubmit email as expected 1`] = `
"Submission MCR-VA-CCCPLUS-0002 was successfully resubmitted<br />
        <br />
        <b>Submitted by:</b> bob@example.com<br />
        <b>Updated on:</b> 02/01/2022<br />
        <b>Changes made:</b> Added rate certification.<br />
        <b>Rate name</b>: MCR-VA-CCCPLUS-0002-RATE-20220705-20220705-CERTIFICATION-20220705<br />
        <br />
        <p>If you need to make any further changes, please contact CMS.</p>
    "
`;

exports[`Email templates snapshot tests renders state unlock email as expected 1`] = `
"Submission MCR-VA-CCCPLUS-0002 was unlocked by CMS<br />
        <br />
        <b>Unlocked by:</b> josh@example.com<br />
        <b>Unlocked on:</b> 02/01/2022<br />
        <b>Reason for unlock:</b> Adding rate certification.<br /><br />
        <b>Rate name</b>: MN-PMAP-0001-RATE-20220621-20221021-AMENDMENT-20210523<br />
        <b>You must revise the submission before CMS can continue reviewing it.<br />
        <a href=\\"http://localhost/submissions/test-abc-123/review-and-submit\\">Open the submission in MC-Review to make edits.</a>
    "
`;
